--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -15,38 +15,49 @@ ul {
   display: flex;
   margin: 0 auto;
   height: 90vh;
-  background-color: #fff;
   max-width: 1000px;
   & > *{
     flex: 1 4 auto;
     padding: 2rem;
     border: 1rem double lighten(black,10%);
-    overflow: scroll;
   }
-  .list-of-products {
-    .product-list {
-    border-bottom: 2px solid #000;
-    border-top: 1px solid #000;
-    padding-bottom: 2rem;
-    padding-top: 2rem;
-    margin-bottom: 5px;
-    clear: both;
-    overflow: hidden;
 
-    .product-name {
-      display: flex;
-      text-transform: capitalize;
-      justify-content: space-between;
-      .price {
-        justify-content: flex-end;
+  .products{
+    overflow: scroll;
+    background-color: #fff;
+
+    .list-of-products {
+      .product-list {
+      border-bottom: 2px solid #000;
+      border-top: 1px solid #000;
+      padding-bottom: 2rem;
+      padding-top: 2rem;
+      margin-bottom: 5px;
+      clear: both;
+      overflow: hidden;
+
+      .product-name {
+        display: flex;
+        text-transform: capitalize;
+        justify-content: space-between;
+        .price {
+          justify-content: flex-end;
+        }
+      }
+      input {
+        width: 25%
+      }
+      img {
+        float: left;
+        width: 150px;
+        height: 100px;
+        margin-right: 1rem
+      }
       }
     }
-    img {
-      float: left;
-      width: 150px;
-      height: 100px;
-      margin-right: 1rem
-    }
-    }
+  }
+  .totals {
+    background-color: #fff;
+    height: 120px;
   }
 }
